--- a/src/main/resources/templates/evenement/evenementDetail.html
+++ b/src/main/resources/templates/evenement/evenementDetail.html
@@ -3,9 +3,10 @@
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
+const supprimerevenement = /*[[#{supprimerevenement}]]*/ null;
 $(document).ready(function() {
 	$('.confirmation').on('click', function () {
-			return confirm([[#{supprimerevenement}]]);
+			return confirm(supprimerevenement);
 		});
 });
 </script>
