--- a/src/main/resources/templates/evenement/evenementForm.html
+++ b/src/main/resources/templates/evenement/evenementForm.html
@@ -58,7 +58,7 @@
 				}
 			}
 		});
-		/*[- */	 Pour trier les noms de types d'événements /* -]*/
+		/*[- Pour trier les noms de types d'événements -]*/
 		const selOpt = typ.val();
 		typ.html($("#type option").sort(function(a, b) {
 			return a.text == b.text ? 0 : a.text < b.text ? -1 : 1;
