--- a/src/main/resources/templates/recolte/recolteForm.html
+++ b/src/main/resources/templates/recolte/recolteForm.html
@@ -22,7 +22,7 @@
 				}
 			}
 		});
-		/*[- */	 Pour trier les noms de types de miel /* -]*/
+		/*[- Pour trier les noms de types de miel -]*/
 		const selOpt = $("#typeMiel").val();
 		$("#typeMiel").html($("#typeMiel option").sort(function(a, b) {
 			return a.text == b.text ? 0 : a.text < b.text ? -1 : 1;
