url doc dans messages.properties, le chapitre reste dans les templates

--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -44,7 +44,7 @@
 					th:title="#{statistiquesessaims}" aria-hidden="true"></a> <a
 					th:href="@{/recolte/statprod}" class="bi-bar-chart"
 					th:title="#{statistiquesProd}" aria-hidden="true"></a> &nbsp;<a
-					th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc1102_1613789997}"
+					th:href="@{#{urldoc}+'1102_1613789997'}"
 					class="bi-book" th:title="#{Doc}" target="_blank"
 					aria-hidden="true"></a>
 			</div>
