--- a/src/main/resources/templates/recolte/recoltesStatProd.html
+++ b/src/main/resources/templates/recolte/recoltesStatProd.html
@@ -33,7 +33,7 @@
 					<a th:href="@{'/recolte/liste'}" th:text="#{Recoltes}"></a>
 					<th:block th:text="' '+#{PoidsMielAnneeKg}"></th:block>
 					&nbsp; <a
-						th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3836_3476563104}"
+						th:href="@{#{urldoc}+'3836_3476563104'}"
 						class="bi-book" th:title="#{Doc}" target="_blank"
 						aria-hidden="true"></a>
 				</h1>
