--- a/src/main/resources/templates/evenement/evenementListe.html
+++ b/src/main/resources/templates/evenement/evenementListe.html
@@ -42,7 +42,7 @@
 				<div class="col" >
 					<a id="cree" th:href="@{/evenement/cree}"
 					  class="bi-plus-lg" th:title="#{evenementCree}" aria-hidden="true"></a>
-   					<a th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc1568_1905309782}"
+   					<a th:href="@{#{urldoc}+'1568_1905309782'}"
 				  		class="bi-book" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
 				</div>
 				<div th:insert="includeForm :: evenementListeDates(retController='/evenement/liste')" class="col">
