--- a/src/main/resources/templates/rucher/rucherAjout.html
+++ b/src/main/resources/templates/rucher/rucherAjout.html
@@ -55,7 +55,7 @@
 			</div>
 			<div class="col">
 				<a
-					th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3543_3352760186}"
+					th:href="@{#{urldoc}+'3543_3352760186'}"
 					class="bi-book" th:title="#{Doc}" target="_blank"
 					aria-hidden="true"></a>
 			</div>
