--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="col">
 				<a
-					th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc3834_3476563104}"
+					th:href="@{#{urldoc}+'3834_3476563104'}"
 					class="bi-book" th:title="#{Doc}" target="_blank"
 					aria-hidden="true"></a> <span class="padicons"> <input
 					type="checkbox" id="groupe" th:title="#{grouper}"
