--- a/src/main/resources/templates/rucher/ruchersHisto.html
+++ b/src/main/resources/templates/rucher/ruchersHisto.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="col">
 				<a
-					th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc6867_3218336070}"
+					th:href="@{#{urldoc}+'6867_3218336070'}"
 					class="bi-book" th:title="#{Doc}" target="_blank"
 					aria-hidden="true"></a> <span class="padicons"> <input
 					type="checkbox" id="groupe" th:title="#{grouper}"
