--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -22,7 +22,7 @@
 				<h1 class="item" th:text="#{testsEven}"></h1>
 			</div>
 			<div class="col">
-				<a th:href="@{/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc4457_1171085051}"
+				<a th:href="@{#{urldoc}+'4457_1171085051'}"
 				  class="bi-book" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
 			</div>
 		</div>
