--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -7,71 +7,67 @@
 <script th:replace="include :: localejsdatetimepicker"></script>
 <script th:replace="include :: moment"></script>
 <script th:inline="javascript">
-const _csrf_token = /*[[${_csrf.token}]]*/ null;
-const _csrf_param_name = /*[[${_csrf.parameterName}]]*/ null;
-const suppRecHauss = /*[[#{supprimerrecolteethausses}]]*/ null;
-const dateRecEpoch = /*[[${dateRecolteEpoch}]]*/ null;
-const enlevTtHauRec = /*[[#{enlevertoutesleshaussesrecolte}]]*/ null;
-const enlevHRecDe30 = /*[[#{enlverhaussesrecoltedelai(30)}]]*/ null;
-const urlRecHDepot = /*[[@{/recolte/haussesDepot/}]]*/ null;
-const recId = /*[[${recolte.id}]]*/ null;
-const totalPourLaRuche = /*[[#{totalPourLaRuche}]]*/ null;
-$(document).ready(function() {	
-	$('#date').hide();
-	$('#dateOK').hide();
-	$("#enlevehausses").click(function() {
-		/*[- */ 
-			// La fonction est désactivée après 30 jours 
-			// 30 * 24 * 3600 * 1000 =  2592000000 
-		/* -]*/
-		if (Date.now() > dateRecEpoch * 1000 + 2592000000) {
-			alert(enlevHRecDe30);
-			return;
-		}
-		if (!confirm(enlevTtHauRec)) {
-			return;
-		}
-		$('#date').show();
-		$('#dateOK').show();
-		$('#date').attr('value', moment().format("MM/DD/YYYY HH:mm"));
-		$('#date').focus();
-	});
-	$('#dateOK').on('click', function() {
-		const date = $('#date').val();
-		$('#date').hide();
-		$('#dateOK').hide();
-		let requestData = {};
-		requestData[_csrf_param_name] = _csrf_token;
-	    requestData['date'] = date;
-	    $.post( urlRecHDepot + recId,
-				requestData).done(function (data) { 
-					alert( data );
-		});		
-	});
-	$('.confirmationsupprime').on('click', function () {
-        return confirm(suppRecHauss);
-    });
-    new DataTable('#hausses', {
-        order: [ [ 1, 'asc' ], [ 0, 'asc' ] ] ,
-    	rowGroup: {
-            dataSrc: 1, // on groupe sur les ruches
-            startRender: null,
-            endRender: function ( rows, group ) {
-                let mielTotal = rows
-                    .data()
-                    .pluck(4)
-                    .reduce( function (a, b) {
-                        return a + parseFloat(b.replace(/,/g,'.'));
-                    }, 0.00);
-                return $('<tr/>')
-                    .append( '<td colspan="4">'+totalPourLaRuche+' '+group+'<\/td>' )
-                    .append( '<td class="num">'+new Intl.NumberFormat(navigator.language, 
-                    	{minimumFractionDigits:2}).format(mielTotal)+'<\/td>' )
-                    .append( '<td colspan="2"><\/td>' );
-            }
-        }
-    });
-} );
+	const _csrf_token = /*[[${_csrf.token}]]*/null;
+	const _csrf_param_name = /*[[${_csrf.parameterName}]]*/null;
+	const suppRecHauss = /*[[#{supprimerrecolteethausses}]]*/null;
+	const dateRecEpoch = /*[[${dateRecolteEpoch}]]*/null;
+	const enlevTtHauRec = /*[[#{enlevertoutesleshaussesrecolte}]]*/null;
+	const enlevHRecDe30 = /*[[#{enlverhaussesrecoltedelai(30)}]]*/null;
+	const urlRecHDepot = /*[[@{/recolte/haussesDepot/}]]*/null;
+	const recId = /*[[${recolte.id}]]*/null;
+	const totalPourLaRuche = /*[[#{totalPourLaRuche}]]*/null;
+	$(document).ready(
+			function() {
+				$('#date').hide();
+				$('#dateOK').hide();
+				$("#enlevehausses").click(function() {
+					/*[- */
+					// La fonction est désactivée après 30 jours 
+					// 30 * 24 * 3600 * 1000 =  2592000000 
+					/* -]*/
+					if (Date.now() > dateRecEpoch * 1000 + 2592000000) {
+						alert(enlevHRecDe30);
+						return;
+					}
+					if (!confirm(enlevTtHauRec)) {
+						return;
+					}
+					$('#date').show();
+					$('#dateOK').show();
+					$('#date').attr('value', moment().format("MM/DD/YYYY HH:mm"));
+					$('#date').focus();
+				});
+				$('#dateOK').on('click', function() {
+					const date = $('#date').val();
+					$('#date').hide();
+					$('#dateOK').hide();
+					let requestData = {};
+					requestData[_csrf_param_name] = _csrf_token;
+					requestData['date'] = date;
+					$.post(urlRecHDepot + recId, requestData).done(function(data) {
+						alert(data);
+					});
+				});
+				$('.confirmationsupprime').on('click', function() {
+					return confirm(suppRecHauss);
+				});
+				new DataTable('#hausses', {
+					order : [ [ 1, 'asc' ], [ 0, 'asc' ] ],
+					rowGroup : {
+						dataSrc : 1, // on groupe sur les ruches
+						startRender : null,
+						endRender : function(rows, group) {
+							let mielTotal = rows.data().pluck(4).reduce(function(a, b) {
+								return a + parseFloat(b.replace(/,/g, '.'));
+							}, 0.00);
+							return $('<tr/>').append('<td colspan="4">' + totalPourLaRuche + ' ' + group + '<\/td>')
+									.append('<td class="num">' + new Intl.NumberFormat(navigator.language, {
+										minimumFractionDigits : 2
+									}).format(mielTotal) + '<\/td>').append('<td colspan="2"><\/td>');
+						}
+					}
+				});
+			});
 </script>
 </head>
 <body>
@@ -89,12 +85,14 @@ $(document).ready(function() {
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{'/recolte/modifie/'+${recolte.id}}"
-					class="bi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
-				&nbsp; <a th:href="@{'/recolte/choixHausses/'+${recolte.id}}"
+				<a th:href="@{'/recolte/modifie/'+${recolte.id}}" class="bi-pencil"
+					th:title="#{modifier}" aria-hidden="true"></a> &nbsp; <a
+					th:href="@{'/recolte/choixHausses/'+${recolte.id}}"
 					class="bi-justify" th:title="#{choixHausesRecolte}"
-					aria-hidden="true"></a> <span id="enlevehausses"
-					class="bi-reply-all cursorpointer"
+					aria-hidden="true"></a> <a
+					th:href="@{'/recolte/haussesMiel/'+${recolte.id}}" class="bi-table"
+					th:title="#{SaisiePoidsMiel}" aria-hidden="true"></a> <span
+					id="enlevehausses" class="bi-reply-all cursorpointer"
 					th:title="#{recolteHausseDepot}" aria-hidden="true"></span> <a
 					th:href="@{'/recolte/statistiques/essaim/'+${recolte.id}}"
 					class="bi-pie-chart" th:title="#{statistiquesessaims}"
