--- a/src/main/resources/templates/recolte/recolteHausseForm.html
+++ b/src/main/resources/templates/recolte/recolteHausseForm.html
@@ -45,8 +45,8 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/recolte/'+${recolte.id}}"
-						th:text="#{recolte} + ' ' + ${#temporals.format(recolte.date, 'yyyy/MM/dd HH:mm')}"></a>
+					<a th:href="@{'/recolte/'+${detailRecolte.recolte.id}}"
+						th:text="#{recolte} + ' ' + ${#temporals.format(detailRecolte.recolte.date, 'yyyy/MM/dd HH:mm')}"></a>
 					<th:block th:text="' : '+#{hausse}+' '+${detailRecolte.hausse.nom}"></th:block>
 				</h1>
 			</div>
