écrans type de ruches dt-responsive

--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -130,7 +130,7 @@
 			<table class="table table-sm table-bordered table-striped" id="ruches">
 				<thead>
 				<tr>
-					<th th:text="#{nom}"></th>
+					<th th:text="#{ruche}"></th>
 					<th th:text="#{essaim}"></th>
 					<th th:if="${session.voirInactif}" th:text="#{active}"></th>
 					<th th:text="#{dateAcquisition}"></th>
