--- a/src/main/resources/templates/ruchetype/rucheTypesListe.html
+++ b/src/main/resources/templates/ruchetype/rucheTypesListe.html
@@ -38,7 +38,7 @@ $(document).ready(function() {
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped" id="ruchetypes">
+		<table class="table table-bordered table-striped dt-responsive" id="ruchetypes">
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
