--- a/src/main/resources/templates/ruchetype/rucheTypeDetail.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeDetail.html
@@ -66,7 +66,7 @@
 		</div>
 	</div>
 	<div class="container-fluid table-responsive" id="ruchetype">
-		<table class="table table-sm table-bordered">
+		<table class="table table-sm table-bordered dt-responsive">
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
