--- a/src/main/resources/templates/ruchetype/rucheTypeDetail.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeDetail.html
@@ -66,7 +66,7 @@
 		</div>
 	</div>
 	<div class="container-fluid table-responsive" id="ruchetype">
-		<table class="table table-sm table-bordered dt-responsive">
+		<table class="table table-sm table-bordered">
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
@@ -86,7 +86,7 @@
 		<h6 th:unless="${#arrays.length(ruches)}" th:text="#{PasDeRuche}"></h6>
 		<th:block th:if="${#arrays.length(ruches)}">
 			<h6 th:text="#{listeXRuches(${#arrays.length(ruches)})}"></h6>
-			<table class="table table-sm table-bordered table-striped"
+			<table class="table table-sm table-bordered table-striped dt-responsive"
 				id="ruches">
 				<thead>
 					<tr>
