--- a/src/main/resources/templates/ruche/ruchesListePlusRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListePlusRucher.html
@@ -45,6 +45,7 @@ $(document).ready(function() {
 					<th style="background-color:lightskyblue" th:text="#{dateAcquisition}"></th>
 					<th style="background-color:lightskyblue" th:text="#{commentaire}"></th>
 					<th style="background-color:PaleGoldenRod" th:text="#{daterucher}"></th>
+					<th th:text="#{prod}"></th>
 					<th th:if="${session.voirInactif}" th:text="#{active}"></th>
 					<th th:text="#{dateAcquisition}"></th>
 					<th th:text="#{poidsVide}"></th>
@@ -81,6 +82,7 @@ $(document).ready(function() {
 					<td th:text="${ruche.essaim?.dateAcquisition}"></td>
 					<td th:text="${ruche.essaim?.commentaire}"></td>
 					<td th:text="${dateAjoutRucher[rucheStat.index]}"></td>
+					<td th:text="${ruche.production}? #{oui} : #{non}"></td>
 					<td th:if="${session.voirInactif}"
 						th:text="${ruche.active}? #{oui} : #{non}"></td>
 					<td th:text="${ruche.dateAcquisition}"></td>
