--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -71,6 +71,10 @@
 			th:field="*{essaim}" /> <input type="hidden" th:field="*{rucher}" />
 		<div th:replace="includeForm :: nomField"></div>
 		<div th:replace="includeForm :: activeField"></div>
+		<div class="form-check">
+			<input class="form-check-input" type="checkbox" th:field="*{production}" />
+			<label class="form-check-label" for="production" th:text="#{production}"></label>
+		</div>
 		<div class="form-floating mb-3">
 			<input class="form-control" placeholder="15.000" type="number"
 				step="0.001" min="0" max="80" th:field="*{poidsVide}"
