spring boot 2.7.11 -> 2.7.12, doc champ production

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns:th="https://www.thymeleaf.org"
+<html xmlns:th="https://www.thymeleaf.org"
 	xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 <head
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
